--- a/package.json
+++ b/package.json
@@ -21,14 +21,22 @@
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/fcm": "^4.5.2",
     "@ionic-native/google-plus": "^4.5.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.4",
+    "cordova-android": "6.3.0",
+    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-fcm": "^2.1.2",
     "cordova-plugin-googleplus": "^5.2.1",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-whitelist": "^1.3.1",
     "firebase": "^4.9.0",
     "ionic-angular": "3.9.2",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
@@ -43,7 +51,13 @@
     "plugins": {
       "cordova-plugin-googleplus": {
         "REVERSED_CLIENT_ID": "295061332117-eeecck75ke76dog2hgsep0o7siflqadn.apps.googleusercontent.com"
-      }
+      },
+      "cordova-plugin-fcm": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {}
     }
   }
 }
